# researchflow-production

./: .continuerc.yaml  .cursorrules  .dockerignore  .env.example  .env.production.template  .env.vercel.example  .gitignore  .lighthouserc.json  .replit  .trivyignore  .vercelignore  AI-AGENT-TASKS.md  AUDIT_IMPLEMENTATION.md  CHANGELOG_PHASE_A.md  CHANGELOG_PHASE_B.md  CHANGELOG_PHASE_C.md  CHECKPOINT_2026_01_26.md  CHECKPOINT_2026_01_29.md  CHECKPOINT_JAN28_2026.md  CHECKPOINT_SUMMARY.md  CLAUDE.md  CLAUDE_PROMPT_Broaden_Playwright_E2E_Critical_Journeys.md  CLAUDE_PROMPT_code_structure_refactor.md  CLAUDE_REFACTOR_PROMPT.md  CODE_OF_CONDUCT.md  COMPONENT_STRUCTURE.md  COMPREHENSIVE_GAP_ANALYSIS.md  CONTAINER_TESTING.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOYMENT_SUMMARY.txt  DOCKER_OPTIMIZATION_PLAN.md  Dockerfile.claude-integration  Dockerfile.manuscript-engine  Dockerfile.vitest  FINAL_DEPLOYMENT_STATUS.md  FIX_COMPLETE_AI_ENDPOINTS.md  FIX_COMPLETE_MANUSCRIPT_ROUTES.md  FIX_PLAN_AI_INSIGHTS.md  FIX_TEMPLATE_MANUSCRIPT_ROUTES.md  (+100 more)
services/worker/: .dockerignore  .env.example  .env.medical.example  Dockerfile  Dockerfile.distroless  api_server.py  pyproject.toml  requirements-medical.txt  requirements.txt
services/worker/.tmp/irb_drafts/: irb_draft_20260129_022204.json
services/worker/analysis/: demo_ai_router_workflow.py  generate_thyroid_dashboard.py  link_patients.py  multi_run_ai_router.py  visualize_multi_run_stats.py
services/worker/analysis/demos/: run_episode_fusion.py  run_linkage_demo.py  run_verification_demo.py
services/worker/config/: README.md  integration_history_record.schema.json  k8s_standby.yaml  patient_signals_ingestion.yaml  phase1.yaml  source_mappings.yaml  sourcelit.yaml  sourcelit_active_index.yaml  sourcelit_active_sandbox.yaml  standby.yaml
services/worker/config/integration_rules/: README.md  integration_rules.example.yaml  integration_rules.schema.json
services/worker/config/linkers/: linker_rules.yaml  linker_schema.yaml
services/worker/connectors/: __init__.py
services/worker/schemas/: clinical_schema.py  export_bundle_v1.json  schema_version_metadata.yaml  template_spec_v1.json
services/worker/src/: cache_config.py  main.py  medical_routes.py  metrics.py  preflight.py  runtime_config.py
services/worker/tests/: __init__.py  conftest.py  test_ai_feedback_integration.py  test_cell_parser.py  test_dag_compiler.py  test_dag_runner.py  test_health_endpoints.py  test_heterogeneous_formats.py  test_id_detection.py  test_ingest_api.py  test_ingestion_config.py  test_integration_large_data.py  test_large_data_ingestion.py  test_merge_ingest.py  test_monitoring.py  test_nlm_client.py  test_prompt_manager.py  test_spreadsheet_cell_parse.py  test_testing_framework.py  test_validation_pipeline.py  test_workflow_extraction.py  test_writer.py
services/worker/workflows/: ORCHESTRATION_LANDSCAPE.md  README.md
(+1893 files in other folders)
