# pyproject.toml - Research Operating System Template
#
# Installation:
#   pip install -e .              # Install runtime dependencies
#   pip install -e ".[dev]"       # Install with dev dependencies
#
# Or install specific groups:
#   pip install pandas==2.3.3 pandera==0.18.0

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "research-operating-system-template"
version = "0.1.0"
description = "A template for reproducible research operations with QA and validation infrastructure"
readme = "README.md"
requires-python = "==3.11.5"
dependencies = [
    "pandas==2.3.3",         # DataFrame operations and data manipulation
    "pandera==0.18.0",       # Schema validation for tabular data
    "multimethod>=1.0,<2.0", # Required for pandera compatibility (avoids 2.x breaking changes)
    "jsonschema==4.25.1",    # JSON Schema validation for export bundles
    "pyarrow>=14.0.0",       # Parquet file I/O and metadata validation (INF-14)
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",           # Testing framework
    "pytest-asyncio==0.23.5",  # Async test support
    "pytest-xdist==3.5.0",     # Parallel test execution
    "pre_commit==4.5.1",       # Local governance hooks
    "detect-secrets==1.5.0",   # Secret scanning (local)
]
web = [
    "streamlit==1.52.2",      # Frontend dashboard (STANDBY mode only)
    "plotly==6.5.1",          # Interactive plotting
    "PyYAML==6.0.1",           # YAML parsing for templates
    "lifelines==0.27.8",       # Survival analysis (Kaplan-Meier)
    "scipy==1.11.2",           # Statistical tests (t-test, chi-square)
    "statsmodels==0.14.0",     # Statistical modeling (trendlines, regression)
    "scikit-learn==1.3.0",     # Predictive modeling (frozen for reproducibility)
]
api = [
    "fastapi==0.128.0",            # API framework
    "uvicorn[standard]==0.27.0",   # ASGI server
    "python-multipart==0.0.21",    # File uploads
    "pydantic==2.12.5",            # Request/response validation
    "email-validator==2.2.0",      # Email validation (auth)
    "requests==2.32.5",            # HTTP client
    "httpx==0.26.0",               # Async HTTP client
    "PyYAML==6.0.1",               # YAML parsing
    "python-jose==3.3.0",          # JWT
    "passlib==1.7.4",              # Password hashing
    "sqlalchemy==2.0.38",          # DB layer
    "Authlib==1.6.6",              # OAuth helpers (optional)
]
validation-docs = [
    "great-expectations>=0.18.0",  # Tier-2 optional: Data Docs for manuscript supplements
]
irb = [
    "python-docx==1.2.0",      # DOCX generation for IRB exports (pinned for reproducibility)
    "reportlab==4.4.7",        # PDF generation for IRB exports (pinned for reproducibility)
]
